Fix horizontal scroll bar

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,6 @@ nav {
 }
 
 .copyright {
-  width: 100%;
   font-size: 18px;
   font-family: "Ysabeau", sans-serif;
   margin: 2px 0;
